[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/PlayerBase/green-square.svg" type="Texture" id=1]
[ext_resource path="res://Objects/HurtBox/HurtBoxArea2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/GameResources/GameResource.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/PlayerBase/PlayerBase.gd" type="Script" id=4]
[ext_resource path="res://Interface/HealthBar/HealthBar.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="Animation" id=2]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBoxArea2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "SETUP"
tracks/0/type = "value"
tracks/0/path = NodePath("HurtBoxArea2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="PlayerBase" type="Node2D"]
script = ExtResource( 4 )

[node name="Health" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )

[node name="HurtBoxArea2D" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxArea2D"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )
disabled = true

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = -80.0
margin_top = -100.0
margin_right = 92.0
margin_bottom = -82.0
step = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "SETUP"
anims/Death = SubResource( 2 )
anims/SETUP = SubResource( 3 )
[connection signal="changed" from="Health" to="." method="_on_Health_changed"]
[connection signal="depleted" from="Health" to="." method="_on_Health_depleted"]
[connection signal="max_changed" from="Health" to="." method="_on_Health_max_changed"]
[connection signal="hit_landed" from="HurtBoxArea2D" to="." method="_on_HurtBoxArea2D_hit_landed"]
